make-a-wish-salesforce/src/objects/ICD_Codes__c.object
<CustomObject>
    <description>List of ICD codes and descriptions.</description>
    <fields>
        <fullName>Condition_Description__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It has one to many relationship with Condition Description.</description>
        <label>Condition Description</label>
        <referenceTo>Condition_Description__c</referenceTo>
        <relationshipLabel>ICD Codes</relationshipLabel>
        <relationshipName>ICD_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It hold the details about Group1</description>
        <label>Group1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden_ICD_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field used to hold the visibility of ICD code in Wish Referral Form and Diagnosis Verification Form</description>
        <label>Hidden ICD Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ICD_Code_No_Period__c</fullName>
        <externalId>true</externalId>
        <label>ICD_Code_No_Period</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Header__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the code a header value not valid for an actual billable submission</description>
        <label>Header Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <description>Long description of ICD code</description>
        <label>Long Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <description>Short description of ICD code</description>
        <label>Short Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skip_Medical_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines whether the medical questions need to be asked</description>
        <label>Skip Medical Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valid_For_Wish__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the code is valid for wish</description>
        <label>Valid For Wish</label>
        <type>Checkbox</type>
    </fields>
    <label>ICD Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Condition_Description__c</columns>
        <columns>Short_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ICD Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ICD Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>